1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (GENINTERFACEFILES): New variable.
	(all): Use it. 
	(GENCLASSFILES, GENINTERFACEFILES): Do phase expansion.

	* GlobalZone.java: Make public.

	* Selector.java: Add objcFlag.  This flag determines whether
	or not the method signature is treated by s/:/$/ or if additional
	arguments are added with concatenation of :.

	* NonUniqueMethodSignatureException.java,
	SignatureNotFoundException.java: New files.

	* Makefile.in (CLASSES): Add NonUniqueMethodSignatureException and
	SignatureNotFoundException.
	(%.class): Add $(srcdir)/.. to classpath.

	* Selector.java: Search through results of getMethods and match
	by signature name.  If there is more than one found, raise
	NonUniqueMethodSignature exception.  If none is found raise
	SignatureNotFoundException. 

1999-03-21  Marcus G. Daniels  <mgd@chimayo.santafe.edu>

	* Selector.java: Make class public.

	* SwarmEnvironment.java: Remove main.  Wrap call to initSwarm
	in constructor.

	* Makefile.in (SWARMCLASSFILES): New variable with swarm/ prefix in
	front of CLASSFILES.
	(all): Pass SWARMCLASSFILES and GENCLASSFILES to jar. 

1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules.in (INTERFACES, CLASSES): Use computed
	variable name to get module protocol list.
	(all): Depend on CLASSFILES.
	(JAVAC): Don't substitute, set to $(jdkdir)/bin/javac.

	* Makefile.in (GENCLASSFILES): New variable.
	(JAR, JAVAC): Set as $(jdkdir)/bin/{jar,javac}, not substitutions.

1999-03-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* GlobalZone.java: New file.

1999-03-19  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.java: Declare globalZone public. 

1999-03-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (all): Set JAVA_HOME in the context of jar.

	* Makefile.rules.in (CLASSFILES, %.class): Set JAVA_HOME in context
	of javac compile.

1999-03-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
